recursion.logo.spiral.SpiralUse.scala.error
Erreur de compilation :
SpiralUse:3: error: type mismatch;
 found   : Double(90.1)
 required: Int
    spiral(500,90.1,1,1);
               ^