recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(500,90.1,1,1);
}